improved tui usability